# tireshop-dev-web

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_pneu.py  0003_pneu_medida.py  0004_compra.py  0005_itenscompra.py
core/views/: __init__.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  fabricante.py  pneu.py  testeIniciais.py
tireshop/: asgi.py  settings.py  urls.py  wsgi.py
